--- a/design-patterns.ipynb
+++ b/design-patterns.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from abc import ABC, abstractmethod"
+    "from abc import ABC, abstractmethod\n",
+    "import random"
    ]
   },
   {
@@ -33,11 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basically, it's when you make a class have a behavior as an attribute. E.g. Context's strategy attribute could be a ContextStrategyA object. When Context wants to do something with a strategy, it simply calls performStrategy, letting the implementation details be carried out by AbstractStrategy itself. Focus on the has-a relationship.\n",
-    "\n",
-    "Focus on the has-a relationship between Context and AbstractStrategy. It's kind of like letting a class have a behavior as its attribute.\n",
-    "\n",
-    "E.g. Context could have a ContextStrategyA algorithm as its attribute. When it wants to do carry out its business logic utilizing the algorithm, it simply calls performStrategy"
+    "Focus on the has-a relationship between Context and AbstractStrategy. It's kind of like letting a class have a behavior as its attribute. E.g. Context could have a ContextStrategyA algorithm as its attribute. When it wants to do carry out its business logic utilizing the algorithm, it simply calls performStrategy. It doesn't know how to perform the algorithm - that's for AbstractStrategy to take care of."
    ]
   },
   {
@@ -58,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -66,6 +63,7 @@
      "output_type": "stream",
      "text": [
       "I'm ConcreteStrategyA!\n",
+      "---\n",
       "I'm ConcreteStrategyB!\n"
      ]
     }
@@ -85,7 +83,7 @@
     "    \n",
     "    # Instead of implementing multiple versions of doSomething on its own,\n",
     "    # The work is delegated to the Strategy object\n",
-    "    def performStrategy(self):\n",
+    "    def doBusinessLogic(self):\n",
     "        self.strategy.doSomething()\n",
     "\n",
     "\"\"\"\n",
@@ -110,10 +108,12 @@
     "        print(\"I'm ConcreteStrategyB!\")\n",
     "        \n",
     "c = Context(ConcreteStrategyA())\n",
-    "c.performStrategy()\n",
+    "c.doBusinessLogic()\n",
+    "\n",
+    "print(\"---\")\n",
     "\n",
     "c.setStrategy(ConcreteStrategyB())\n",
-    "c.performStrategy()"
+    "c.doBusinessLogic()"
    ]
   },
   {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -235,7 +235,206 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Observer Pattern"
+    "## Observer Pattern\n",
+    "\n",
+    "The Observer Pattern defines a one-to-many dependency between objects so that when one object changes state, all of its dependents are notified and updated automatically."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pull Model (2-Way Communication)\n",
+    "\n",
+    "- When the subject's state changes, it notifies its observers **that its state has changed**\n",
+    "- If the observer is interested, it can call back for details by calling subject.getData()\n",
+    "\n",
+    "\n",
+    "### Push Model (1-Way Communication)\n",
+    "\n",
+    "- When the subject's state changes, it notifies its observers **by sending detailed information about the update**, whether or not the Observer is interested or not\n",
+    "- Hence, the observer never needs to call back\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benefits of Observer Pattern\n",
+    "\n",
+    "- Loose coupling (pg. 53)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Skelly Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> ConcreteObserverA was notified of Subject's new state: 6\n",
+      "> ConcreteObserverB was notified of Subject's new state: 6\n",
+      "> ConcreteObserverB was notified of Subject's new state: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class AbstractSubject(ABC):\n",
+    "    @abstractmethod\n",
+    "    def register(self, observer):\n",
+    "        pass\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def unregister(self, observer):\n",
+    "        pass\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def notify(self):\n",
+    "        pass\n",
+    "    \n",
+    "class AbstractObserver(ABC):\n",
+    "    @abstractmethod\n",
+    "    def update(self, subject):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Pull Model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> ConcreteObserverA was notified of Subject's new state: 9\n",
+      "> ConcreteObserverB was notified of Subject's new state: 9\n",
+      "> ConcreteObserverB was notified of Subject's new state: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ConcreteSubject(AbstractSubject):\n",
+    "    state = None\n",
+    "    observers = []\n",
+    "    \n",
+    "    def register(self, observer):\n",
+    "        self.observers.append(observer)\n",
+    "        \n",
+    "    def unregister(self, observer):\n",
+    "        self.observers.remove(observer)\n",
+    "    \n",
+    "    def notify(self):\n",
+    "        for observer in self.observers:\n",
+    "            observer.update(self) # Subject passed as parameter\n",
+    "            \n",
+    "    def getState(self):\n",
+    "        return self.state\n",
+    "            \n",
+    "    def doBusinessLogic(self):\n",
+    "        self.state = random.randint(0, 10)\n",
+    "        self.notify() # Notify when state changes\n",
+    "        \n",
+    "class ConcreteObserverA(AbstractObserver):\n",
+    "    def update(self, subject):        \n",
+    "        print(f\"> ConcreteObserverA was notified of Subject's new state: {subject.getState()}\")\n",
+    "    \n",
+    "class ConcreteObserverB(AbstractObserver):\n",
+    "    def update(self, subject):\n",
+    "        print(f\"> ConcreteObserverB was notified of Subject's new state: {subject.getState()}\")\n",
+    "            \n",
+    "subject = ConcreteSubject()\n",
+    "\n",
+    "# Register new observers\n",
+    "observerA = ConcreteObserverA()\n",
+    "subject.register(observerA)\n",
+    "observerB = ConcreteObserverB()\n",
+    "subject.register(observerB)\n",
+    "\n",
+    "subject.doBusinessLogic()\n",
+    "subject.unregister(observerA) # Unregister Observer A\n",
+    "subject.doBusinessLogic()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Push Model**\n",
+    "\n",
+    "Focus on the difference in the subject's **notify() method**, and that the observers' **update() methods** take in the subject's state - not the subject object itself."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> ConcreteObserverA was notified of Subject's new state: 10\n",
+      "> ConcreteObserverB was notified of Subject's new state: 10\n",
+      "> ConcreteObserverB was notified of Subject's new state: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ConcreteSubject(AbstractSubject):\n",
+    "    state = None\n",
+    "    observers = []\n",
+    "    \n",
+    "    def register(self, observer):\n",
+    "        self.observers.append(observer)\n",
+    "        \n",
+    "    def unregister(self, observer):\n",
+    "        self.observers.remove(observer)\n",
+    "    \n",
+    "    def notify(self):\n",
+    "        for observer in self.observers:\n",
+    "            observer.update(self.state) # State passed in instead of Subject\n",
+    "            \n",
+    "    def doBusinessLogic(self):\n",
+    "        self.state = random.randint(0, 10)\n",
+    "        self.notify()\n",
+    "        \n",
+    "class ConcreteObserverA(AbstractObserver):\n",
+    "    def update(self, state):        \n",
+    "        print(f\"> ConcreteObserverA was notified of Subject's new state: {state}\")\n",
+    "    \n",
+    "class ConcreteObserverB(AbstractObserver):\n",
+    "    def update(self, state):\n",
+    "        print(f\"> ConcreteObserverB was notified of Subject's new state: {state}\")\n",
+    "            \n",
+    "subject = ConcreteSubject()\n",
+    "\n",
+    "# Register new observers\n",
+    "observerA = ConcreteObserverA()\n",
+    "subject.register(observerA)\n",
+    "observerB = ConcreteObserverB()\n",
+    "subject.register(observerB)\n",
+    "\n",
+    "subject.doBusinessLogic()\n",
+    "subject.unregister(observerA) # Unregister Observer A\n",
+    "subject.doBusinessLogic()"
    ]
   },
   {
