--- a/design-patterns.ipynb
+++ b/design-patterns.ipynb
@@ -263,7 +263,7 @@
    "source": [
     "### Benefits of Observer Pattern\n",
     "\n",
-    "- Loose coupling (pg. 53)"
+    "- Loose coupling"
    ]
   },
   {
@@ -275,19 +275,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> ConcreteObserverA was notified of Subject's new state: 6\n",
-      "> ConcreteObserverB was notified of Subject's new state: 6\n",
-      "> ConcreteObserverB was notified of Subject's new state: 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class AbstractSubject(ABC):\n",
     "    @abstractmethod\n",
@@ -312,21 +302,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Pull Model**"
+    "### Pull Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> ConcreteObserverA was notified of Subject's new state: 9\n",
-      "> ConcreteObserverB was notified of Subject's new state: 9\n",
-      "> ConcreteObserverB was notified of Subject's new state: 0\n"
+      "> ConcreteObserverA was notified of Subject's new state: 4\n",
+      "> ConcreteObserverB was notified of Subject's new state: 4\n",
+      "---\n",
+      "> ConcreteObserverB was notified of Subject's new state: 8\n"
      ]
     }
    ],
@@ -369,6 +360,9 @@
     "subject.register(observerB)\n",
     "\n",
     "subject.doBusinessLogic()\n",
+    "\n",
+    "print(\"---\")\n",
+    "\n",
     "subject.unregister(observerA) # Unregister Observer A\n",
     "subject.doBusinessLogic()"
    ]
@@ -377,23 +371,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Push Model**\n",
+    "### Push Model\n",
     "\n",
     "Focus on the difference in the subject's **notify() method**, and that the observers' **update() methods** take in the subject's state - not the subject object itself."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> ConcreteObserverA was notified of Subject's new state: 10\n",
-      "> ConcreteObserverB was notified of Subject's new state: 10\n",
-      "> ConcreteObserverB was notified of Subject's new state: 0\n"
+      "> ConcreteObserverA was notified of Subject's new state: 7\n",
+      "> ConcreteObserverB was notified of Subject's new state: 7\n",
+      "---\n",
+      "> ConcreteObserverB was notified of Subject's new state: 7\n"
      ]
     }
    ],
@@ -433,16 +428,12 @@
     "subject.register(observerB)\n",
     "\n",
     "subject.doBusinessLogic()\n",
+    "\n",
+    "print(\"---\")\n",
+    "\n",
     "subject.unregister(observerA) # Unregister Observer A\n",
     "subject.doBusinessLogic()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
