updates to strategy & observer patterns

--- a/design-patterns.ipynb
+++ b/design-patterns.ipynb
@@ -8,6 +8,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions to Keep in Mind\n",
+    "\n",
+    "1. When should I apply a design pattern?\n",
+    "2. What problem is the pattern trying to solve?\n",
+    "3. How does the design pattern work?\n",
+    "4. What are the benefits and costs of applying the design pattern?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -41,9 +53,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Benefits of Strategy Pattern\n",
+    "### Pros of Strategy Pattern\n",
     "\n",
-    "???"
+    "1. Encapsulation\n",
+    "2. Implementation hiding\n",
+    "3. Ability to change behavior at runtime\n",
+    "\n",
+    "### Cons of Strategy Pattern\n",
+    "\n",
+    "1. Complex, hard-to-understand code"
    ]
   },
   {
@@ -237,7 +255,9 @@
    "source": [
     "## Observer Pattern\n",
     "\n",
-    "The Observer Pattern defines a one-to-many dependency between objects so that when one object changes state, all of its dependents are notified and updated automatically."
+    "The Observer Pattern defines a one-to-many dependency between objects so that when one object changes state, all of its dependents are notified and updated automatically.\n",
+    "\n",
+    "![](uml-diagrams/observer-pattern.png)"
    ]
   },
   {
@@ -261,9 +281,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Benefits of Observer Pattern\n",
+    "### Pros of Observer Pattern\n",
     "\n",
-    "- Loose coupling"
+    "1. Loose coupling between a Subject and its Observers\n",
+    "    - Subjects will notify their Observers once a change occurs\n",
+    "    - Observers are allowed to change their interests in a Subject freely\n",
+    "    - Observers want to know a Subject's change when it occurs but don't know when it will happen\n",
+    "2. Reusability of Subjects and Observers as they are independent of each other\n",
+    "3. Broadcast communication\n",
+    "\n",
+    "### Cons of Observer Pattern\n",
+    "\n",
+    "1. Slower performance\n",
+    "2. Higher complexity"
    ]
   },
   {
@@ -332,9 +362,10 @@
     "    def unregister(self, observer):\n",
     "        self.observers.remove(observer)\n",
     "    \n",
+    "    \"\"\"Subject passed as parameter\"\"\"\n",
     "    def notify(self):\n",
     "        for observer in self.observers:\n",
-    "            observer.update(self) # Subject passed as parameter\n",
+    "            observer.update(self)\n",
     "            \n",
     "    def getState(self):\n",
     "        return self.state\n",
@@ -344,6 +375,7 @@
     "        self.notify() # Notify when state changes\n",
     "        \n",
     "class ConcreteObserverA(AbstractObserver):\n",
+    "    \"\"\"Observer calls Subject's getters\"\"\"\n",
     "    def update(self, subject):        \n",
     "        print(f\"> ConcreteObserverA was notified of Subject's new state: {subject.getState()}\")\n",
     "    \n",
@@ -363,7 +395,7 @@
     "\n",
     "print(\"---\")\n",
     "\n",
-    "subject.unregister(observerA) # Unregister Observer A\n",
+    "subject.unregister(observerA)\n",
     "subject.doBusinessLogic()"
    ]
   },
@@ -402,10 +434,11 @@
     "        \n",
     "    def unregister(self, observer):\n",
     "        self.observers.remove(observer)\n",
-    "    \n",
+    "\n",
+    "    \"\"\"State passed in instead of subject\"\"\"\n",
     "    def notify(self):\n",
     "        for observer in self.observers:\n",
-    "            observer.update(self.state) # State passed in instead of Subject\n",
+    "            observer.update(self.state) \n",
     "            \n",
     "    def doBusinessLogic(self):\n",
     "        self.state = random.randint(0, 10)\n",
@@ -431,7 +464,7 @@
     "\n",
     "print(\"---\")\n",
     "\n",
-    "subject.unregister(observerA) # Unregister Observer A\n",
+    "subject.unregister(observerA)\n",
     "subject.doBusinessLogic()"
    ]
   }
