factory method pattern, facade pattern

--- a/design-patterns.ipynb
+++ b/design-patterns.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,20 +46,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Focus on the has-a relationship between Context and AbstractStrategy. It's kind of like letting a class have a behavior as its attribute. E.g. Context could have a ContextStrategyA algorithm as its attribute. When it wants to do carry out its business logic utilizing the algorithm, it simply calls performStrategy. It doesn't know how to perform the algorithm - that's for AbstractStrategy to take care of."
+    "Note to self: Focus on the has-a relationship between Context and AbstractStrategy. It's kind of like letting a class have a behavior as its attribute. E.g. Context could have a ContextStrategyA algorithm as its attribute. When it wants to do carry out its business logic utilizing the algorithm, it simply calls performStrategy. It doesn't know how to perform the algorithm - that's for AbstractStrategy to take care of."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pros of Strategy Pattern\n",
+    "#### Pros of Strategy Pattern\n",
     "\n",
     "1. Encapsulation\n",
     "2. Implementation hiding\n",
     "3. Ability to change behavior at runtime\n",
     "\n",
-    "### Cons of Strategy Pattern\n",
+    "#### Cons of Strategy Pattern\n",
     "\n",
     "1. Complex, hard-to-understand code"
    ]
@@ -264,13 +264,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pull Model (2-Way Communication)\n",
+    "#### Pull Model (2-Way Communication)\n",
     "\n",
     "- When the subject's state changes, it notifies its observers **that its state has changed**\n",
     "- If the observer is interested, it can call back for details by calling subject.getData()\n",
     "\n",
     "\n",
-    "### Push Model (1-Way Communication)\n",
+    "#### Push Model (1-Way Communication)\n",
     "\n",
     "- When the subject's state changes, it notifies its observers **by sending detailed information about the update**, whether or not the Observer is interested or not\n",
     "- Hence, the observer never needs to call back\n",
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pros of Observer Pattern\n",
+    "#### Pros of Observer Pattern\n",
     "\n",
     "1. Loose coupling between a Subject and its Observers\n",
     "    - Subjects will notify their Observers once a change occurs\n",
@@ -290,7 +290,7 @@
     "2. Reusability of Subjects and Observers as they are independent of each other\n",
     "3. Broadcast communication\n",
     "\n",
-    "### Cons of Observer Pattern\n",
+    "#### Cons of Observer Pattern\n",
     "\n",
     "1. Slower performance\n",
     "2. Higher complexity"
@@ -466,6 +466,190 @@
     "\n",
     "subject.unregister(observerA)\n",
     "subject.doBusinessLogic()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Factory Method Pattern\n",
+    "\n",
+    "The Factory Method Pattern defines an interface for creating an object, but lets subclasses decide which class to instantiate. Factory Method lets a class defer instantiation to subclasses.\n",
+    "\n",
+    "![](uml-diagrams/factory-method-pattern.png)\n",
+    "\n",
+    "Note to self: You are abstracting the Factory and Product. The Factory MUST have a method that creates a Product. Whenever you add a new Product subclass (e.g. ProductX), you just have to add a corresponding Factory (e.g. ConcreteCreatorX). And when you want to initialize ProductX, call:\n",
+    "\n",
+    "```\n",
+    "Creator c = new ConcreteCreatorX()\n",
+    "Product x = c.factory_method() // x is an instance of ProductX\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### When to Use the Factory Method Pattern\n",
+    "\n",
+    "1. When you don't know which class (implementing a common superclass) you will instantiate until runtime\n",
+    "2. When you don't want to expose the creation logic to the client\n",
+    "3. When you want to localize the logic to instantiate objects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pros of Factory Method Pattern\n",
+    "\n",
+    "1. Encapsulate and centralize object creation and class selection\n",
+    "2. Greater flexibility in object creation\n",
+    "    - Easy to extend/replace/add new subclasses (e.g. different database implementations)\n",
+    "    - Easy to change object creation logic (e.g. singleton objects, lazy initialization, etc.)\n",
+    "3. Ability to choose which classes to instantiate at runtime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Skelly Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Called from the creator:\n",
+      "ConcreteProductA is operating...\n",
+      "Called from the creator:\n",
+      "ConcreteProductB is operating...\n",
+      "---\n",
+      "ConcreteProductA is operating...\n",
+      "---\n",
+      "ConcreteProductB is operating...\n",
+      "---\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Creator(ABC):\n",
+    "    @abstractmethod\n",
+    "    def factory_method(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def doBusinessLogic(self):\n",
+    "        product = self.factory_method()\n",
+    "        print(\"Called from the creator:\")\n",
+    "        product.operation()\n",
+    "\n",
+    "class ConcreteCreatorA(Creator):\n",
+    "    def factory_method(self):\n",
+    "        return ConcreteProductA()\n",
+    "    \n",
+    "class ConcreteCreatorB(Creator):\n",
+    "    def factory_method(self):\n",
+    "        return ConcreteProductB()\n",
+    "    \n",
+    "class Product(ABC):\n",
+    "    @abstractmethod\n",
+    "    def operation(self):\n",
+    "        pass\n",
+    "    \n",
+    "class ConcreteProductA(ABC):\n",
+    "    def operation(self):\n",
+    "        print(\"ConcreteProductA is operating...\")\n",
+    "    \n",
+    "class ConcreteProductB(ABC):\n",
+    "    def operation(self):\n",
+    "        print(\"ConcreteProductB is operating...\")\n",
+    "    \n",
+    "factory = ConcreteCreatorA()\n",
+    "factory.doBusinessLogic()\n",
+    "\n",
+    "print(\"---\")\n",
+    "\n",
+    "factory = ConcreteCreatorB()\n",
+    "factory.doBusinessLogic()\n",
+    "\n",
+    "print(\"---\")\n",
+    "\n",
+    "productA = factoryA.factory_method()\n",
+    "productA.operation()\n",
+    "\n",
+    "print(\"---\")\n",
+    "\n",
+    "productB = ConcreteCreatorB().factory_method()\n",
+    "productB.operation()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Facade Pattern\n",
+    "\n",
+    "The Facade Pattern provides a unified interface to a set of interfaces in a subsystem. Facade defines a higher-level interface that makes the subsystem easier to use.\n",
+    "\n",
+    "Basically, it provides **convenient access** to a particular part of the subsystem's functionality. E.g. To convert a video, you would have to rely on `AudioMixer`, `VideoFile`, `CodecFactory`, `BitrateReader`, `OggCompressionCodec`, `MPEG4CompressionCodec` classes. Instead of making your main program work with all these extra classes, you create a facade class `VideoConverter` which encapsulates that functionality and hides it from the rest of the code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pros of Facade Pattern\n",
+    "\n",
+    "1. Easy to use and understand\n",
+    "2. Reduced dependencies on other classes\n",
+    "3. Client decoupled from complex system\n",
+    "\n",
+    "#### Cons of Facade Pattern\n",
+    "\n",
+    "1. Increased complexity\n",
+    "2. Decreased runtime performance if there are a lot of Facade classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Skelly Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Facade:\n",
+    "    def __init__(self, subsystem1, subsystem2):\n",
+    "        self.subsystem1 = subsystem1\n",
+    "        self.subsystem2 = subsystem2\n",
+    "        \n",
+    "    def operation(self):\n",
+    "        subsystem1.operation()\n",
+    "        subsystem2.operation()\n",
+    "    \n",
+    "class Subsystem1:\n",
+    "    def operation(self):\n",
+    "        print(\"I'm in Subsystem1!\")\n",
+    "    \n",
+    "class Subsystem2:\n",
+    "    def operation(self):\n",
+    "        print(\"I'm in Subsystem2!\")\n",
+    "    \n",
+    "subsystem1 = Subsystem1()\n",
+    "subsystem2 = Subsystem2()\n",
+    "facade = Facade(subsystem1, subsystem2)\n",
+    "facade.operation()"
    ]
   }
  ],
